fixing tab alignment

--- a/style/about.css
+++ b/style/about.css
@@ -69,7 +69,7 @@ body {
 }
 @media screen and (max-width: 480px) {
     .skills_tab {
-        top: 40%;
+        top: 50%;
         width: 30%;
         height: 30px;
         font-size: 20px;
